tests/ui/derives/derives-span-PartialOrd-enum.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-enum.rs:9:6
   |
LL | #[derive(PartialOrd,PartialEq)]
   |          ---------- in this derive macro expansion
...
LL |      Error
   |      ^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
help: item with same name found
  --> $SRC_DIR/std/src/thread/local.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/net/parser.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/os/unix/net/ancillary.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/cell.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/cell.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/convert.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/decode.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/process.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/slice/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/io/buffered/mod.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/env.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/alloc/layout.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/path.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/str/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/convert.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/num/dec2flt/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/num/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/poison.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpmc/error.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/path.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/time.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/time.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/num/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/array/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/collections/mod.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/collections/btree/map.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/str/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/env.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/alloc/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/collections/btree/map/entry.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/collections/hash/map.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/fmt/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/fs.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/io/error.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/poison.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: consider annotating `Error` with `#[derive(PartialOrd)]`
   |
LL + #[derive(PartialOrd)]
LL | struct Error;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
